homelab/core/gateway/gateway.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: infra
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: tailscale-services
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: tailscale-services
    namespace: envoy-gateway-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: services
  namespace: infra
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-prod
spec:
  gatewayClassName: tailscale-services
  listeners:
    - name: main
      hostname: "*.kndlive.com"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway.infra.services/allow-routes: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - name: services-tls-gateway
    - name: kndlive-de
      hostname: "*.kndlive.de"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway.infra.services/allow-routes: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - name: services-tls-gateway-de
